--- a/ExternalServer/ES_FrontEnd/UserControls/UC_ClientListItem.xaml
+++ b/ExternalServer/ES_FrontEnd/UserControls/UC_ClientListItem.xaml
@@ -28,7 +28,7 @@
     
     <Grid Height="297" Width="390" Background="#1D1D1D" Margin="5">
 
-        <Label Content="Client ID" FontSize="18" FontFamily="Montserrat" Foreground="#B7B7B7" Padding="-2" Margin="24 24 289 251"/>
+        <Label x:Name="Lbl_ClientID" Content="Client ID" FontSize="18" FontFamily="Montserrat" Foreground="#B7B7B7" Padding="-2" Margin="24 24 289 251"/>
 
         <Button x:Name="Btn_changeClient" Height="20" Width="20" Margin="348 23 20 254" Background="Transparent" Padding="-1" BorderBrush="Transparent" Click="OnBtn_changeClient_Click">
             <Image  Source="pack://application:,,,/ES_FrontEnd;component/Resources/Icons/Icn_Settings.png"/>
