--- a/ExternalServer/ES_FrontEnd/UserControls/UC_Scenario.xaml
+++ b/ExternalServer/ES_FrontEnd/UserControls/UC_Scenario.xaml
@@ -71,7 +71,11 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        
+        <Grid Grid.Row="0">
+            <WrapPanel x:Name="Wrp_ClientNodes" Margin="0,230,0,10" HorizontalAlignment="Center">
+                
+            </WrapPanel>
+        </Grid>
         
         
         <!--#region ___Lower Region___-->
